<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    tools:context="com.beyondidentity.embedded.embeddedui.ui.BeyondIdentityRegistrationFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:text="@string/embedded_ui_register_signup"
        android:textAppearance="@style/HeadingS.Bold"
        android:textColor="@color/neutral_90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/registration_title_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spacing_l"
        android:background="@color/neutral_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/registration_credential_status_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginTop="@dimen/spacing_xxxl"
        android:layout_marginEnd="@dimen/spacing_l"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_title_line"
        card_view:cardCornerRadius="@dimen/spacing_m"
        card_view:cardElevation="@dimen/spacing_m">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/spacing_xl">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/check_cred_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/registration_check_credential_status"
                android:textAppearance="@style/HeadingM"
                android:textColor="@color/neutral_70"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/enter_email_to_generate_cred_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:gravity="center"
                android:textAppearance="@style/TextM"
                android:textColor="@color/neutral_60"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/check_cred_status"
                tools:text="@string/registration_enter_email_to_generate_cred" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/what_is_cred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:gravity="center"
                android:text="@string/registration_what_is_a_credential"
                android:textAppearance="@style/TextM"
                android:textColor="@color/standard_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_email_to_generate_cred_details" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_email_input"
                style="@style/PrimaryInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_l"
                android:hint="@string/registration_email_address"
                android:inputType="textEmailAddress"
                android:text="igor@bi.com"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/what_is_cred" />

            <com.beyondidentity.embedded.embeddedui.ui.BiLoadingButton
                android:id="@+id/registration_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:background="@drawable/primary_button_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_email_input" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/could_not_complete_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_m"
                android:gravity="center"
                android:text="@string/could_not_complete_sign_up"
                android:textAppearance="@style/TextM"
                android:textColor="@color/danger_main"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_sign_up_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registration_have_a_cred_elsewhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:layout_marginEnd="@dimen/spacing_s"
        android:text="@string/have_a_credential_elsewhere"
        android:textAppearance="@style/TextS"
        app:layout_constraintEnd_toStartOf="@+id/registration_add_to_device"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_credential_status_container" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registration_add_to_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:text="@string/add_to_this_device"
        android:textAppearance="@style/TextS"
        android:textColor="@color/standard_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/registration_have_a_cred_elsewhere"
        app:layout_constraintTop_toBottomOf="@id/registration_credential_status_container" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registration_dont_have_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginEnd="@dimen/spacing_s"
        android:text="@string/don_t_have_access_to_your_credential"
        android:textAppearance="@style/TextS"
        app:layout_constraintEnd_toStartOf="@+id/registration_recover_account"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_add_to_device" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registration_recover_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:text="@string/recover_account"
        android:textAppearance="@style/TextS"
        android:textColor="@color/standard_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/registration_dont_have_access"
        app:layout_constraintTop_toBottomOf="@id/registration_add_to_device" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registration_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginEnd="@dimen/spacing_s"
        android:text="@string/questions_or_issues"
        android:textAppearance="@style/TextS"
        app:layout_constraintEnd_toStartOf="@+id/registration_visit_support"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_recover_account" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registration_visit_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:text="@string/visit_support"
        android:textAppearance="@style/TextS"
        android:textColor="@color/standard_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/registration_questions"
        app:layout_constraintTop_toBottomOf="@id/registration_recover_account" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_visit_support"
        app:srcCompat="@drawable/ic_powered_by_bi" />

</androidx.constraintlayout.widget.ConstraintLayout>