<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    tools:context="com.beyondidentity.embedded.embeddedui.ui.BeyondIdentitySettingsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/show_qr_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:text="@string/show_qr_code"
        android:textAppearance="@style/HeadingS.Bold"
        android:textColor="@color/neutral_90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/show_qr_title_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spacing_l"
        android:background="@color/neutral_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_qr_title" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/show_qr_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_qr_title_line" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/show_qr_image_code"
        android:layout_width="@dimen/camera_view_size"
        android:layout_height="@dimen/camera_view_size"
        android:layout_marginTop="@dimen/spacing_xxl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_qr_title_line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/show_qr_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_xl"
        android:layout_marginEnd="@dimen/spacing_xl"
        android:gravity="center"
        android:text="@string/show_qr_desc"
        android:textAppearance="@style/TextM"
        android:textColor="@color/neutral_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_qr_image_code" />

    <View
        android:id="@+id/show_qr_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/neutral_30"
        app:layout_constraintTop_toBottomOf="@id/show_qr_desc" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/shoq_qr_no_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_xl"
        android:gravity="center"
        android:text="@string/show_qr_no_camera_use_code"
        android:textAppearance="@style/TextM"
        android:textColor="@color/neutral_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_qr_desc" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/show_qr_text_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xl"
        android:layout_marginTop="@dimen/spacing_m"
        android:layout_marginEnd="@dimen/spacing_xl"
        android:gravity="center"
        android:textAppearance="@style/HeadingM"
        android:textColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shoq_qr_no_camera"
        tools:text="R4F-J9J-LOD" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/show_qr_error_ic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxxl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_qr_title_line"
        app:srcCompat="@drawable/ic_error_qr" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/show_qr_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:text="@string/show_qr_error"
        android:textAppearance="@style/TextM"
        android:textColor="@color/danger_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_qr_error_ic" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/show_qr_error_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="show_qr_error_ic, show_qr_error_text"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/show_qr_content_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="show_qr_image_code, show_qr_desc,shoq_qr_no_camera,show_qr_text_code" />

</androidx.constraintlayout.widget.ConstraintLayout>